--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -49,3 +49,10 @@ body {
         color: rgba(255, 255, 255, 0.3);
     }
 }
+
+.brick-col {
+    background-image: url('/LeaderBoard/Brick.webp');
+    background-size: 82px; /* Set the size of the background image */
+    background-position: center;
+    background-repeat: repeat; /* If you want the image to repeat across the background */
+  }
