--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,28 @@
+@import url('https://fonts.googleapis.com/css2?family=Bungee&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cantora+One&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face{
+    font-family:'Google Sans';
+    font-style:normal;
+    font-weight:400;
+    font-display:block;
+    src:url(//fonts.gstatic.com/s/googlesans/v58/4UaRrENHsxJlGDuGo1OIlJfC6l_24rlCK1Yo_Iq2rgCIlsw.woff2)format('woff2');
+    unicode-range:U+0308,U+0530-058F,U+2010,U+2024,U+25CC,U+FB13-FB17;
+  }
+  
+  @font-face{
+    font-family:'Google Sans';
+    font-style:normal;
+    font-weight:400;
+    font-display:block;
+    src:url(//fonts.gstatic.com/s/googlesans/v58/4UaRrENHsxJlGDuGo1OIlJfC6l_24rlCK1Yo_Iq2rgCIlsw.woff2)format('woff2');
+    unicode-range:U+0308,U+0530-058F,U+2010,U+2024,U+25CC,U+FB13-FB17;
+  }
+  
 
 body {
     margin: 0;
@@ -55,4 +77,25 @@ body {
     background-size: 82px; /* Set the size of the background image */
     background-position: center;
     background-repeat: repeat; /* If you want the image to repeat across the background */
+  }
+
+  .button-dashed-border {
+    position: relative;
+  }
+  
+  .button-dashed-border::before {
+    content: "";
+    position: absolute;
+    top: -0.5px;
+    right: -1px;
+    bottom: -1px;
+    left: -1px;
+    background-image: 
+      linear-gradient(to right, white 60%, transparent 40%),
+      linear-gradient(to right, white 60%, transparent 40%),
+      linear-gradient(to bottom, white 60%, transparent 40%),
+      linear-gradient(to bottom, white 60%, transparent 40%);
+    background-size: 20px 1px, 20px 1px, 1px 20px, 1px 20px;
+    background-repeat: repeat-x, repeat-x, repeat-y, repeat-y;
+    background-position: top, bottom, left, right;
   }
